--- a/app/page.css
+++ b/app/page.css
@@ -19,7 +19,7 @@
   background-color: rgba(241, 241, 241, 0.8);
   border: 3px solid white;
   transition: all 50ms ease-in-out;
-  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.315) inset;
+  box-shadow: 0 0 2rem rgba(0, 0, 0, 0.5);
 }
 .btn:active {
   background-color: rgb(255, 255, 255);
@@ -45,34 +45,38 @@
   border: 3px solid rgb(72, 238, 89);
   left: calc(2 / 3 * 100%);
 }
-.result{
+.result {
   position: absolute;
-  padding: 0.5rem;
+  padding: 1rem;
   width: 100%;
   max-width: min(30rem, 90vw);
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
-  background: #333;
+  transform: translate(-50%, -50%);
+  background: #33333369;
+  backdrop-filter: blur(2rem);
+  box-shadow: 0 0 2rem rgba(0, 0, 0, 0.5);
+  border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 1rem;
   color: white;
   z-index: 2;
 }
-.result>h2{
-font-size: 2rem;
+.result > h2 {
+  margin: 0.5rem;
+  font-size: 2rem;
 }
-.result .pill{
+.result .pill {
   padding: 0.25rem 0.5rem;
   margin: 0.25rem 0;
-  background: hsla(0, 0%, 0%, 0.50);
+  background: hsla(0, 0%, 0%, 0.1);
   border: 1px solid rgba(255, 255, 255, 0.3);
   max-width: max-content;
   border-radius: 1rem;
 }
-.result .suggestion{
+.result .suggestion {
   border-radius: 1rem;
 }
-.result .closeBtn{
+.result .closeBtn {
   position: absolute;
   top: 0;
   right: 0;
