--- a/app/page.css
+++ b/app/page.css
@@ -82,7 +82,7 @@
   top: 0;
   right: 0;
   margin: 0.5rem;
-  background: #981f1f;
+  background: #7F0609;
   border-radius: 50vw;
   padding: 0.2rem;
 }
