--- a/app/page.css
+++ b/app/page.css
@@ -40,6 +40,12 @@
 
   left: calc(1 / 3 * 100%);
 }
+.facing-mode-btn {
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 3px solid rgb(85, 85, 85);
+  scale: 0.75;
+  left: calc(1/4 * 100%);
+}
 .send-btn {
   background-color: rgba(182, 255, 220, 0.8);
   border: 3px solid rgb(72, 238, 89);
