--- a/app/page.css
+++ b/app/page.css
@@ -41,7 +41,7 @@
   left: calc(1 / 3 * 100%);
 }
 .facing-mode-btn {
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: #333;
   border: 3px solid rgb(85, 85, 85);
   scale: 0.75;
   left: calc(1/4 * 100%);
