--- a/app/page.css
+++ b/app/page.css
@@ -53,15 +53,22 @@
 
   left: calc(3 / 4 * 100%);
 }
-.result {
+.resultContainer{
+  display: grid;
+justify-content: center;
   position: absolute;
-  padding: 1rem;
   width: 100%;
-  margin-top: 1rem;
-  max-width: min(30rem, 90vw);
   top: 0%;
   left: 50%;
   transform: translate(-50%, 0%);
+  height: 100%;
+  overflow-y: scroll;
+
+}
+.result {
+  max-width: min(30rem, 90vw);
+  margin-block: 1rem;
+  padding: 1rem;
   background: #33333369;
   backdrop-filter: blur(2rem);
   box-shadow: 0 0 2rem rgba(0, 0, 0, 0.5);
@@ -95,5 +102,5 @@
   border: 1.75px solid #ff756d;
   box-shadow: 0 0 2rem rgba(0, 0, 0, 0.25);
   border-radius: 50vw;
-  padding: 0.2rem;
+  padding: 0.25rem;
 }
