--- a/app/page.css
+++ b/app/page.css
@@ -3,16 +3,24 @@
   padding: 0;
 }
 
-.canvas {
+.videoWrapper {
+  height: max-content;
+  margin: 1rem;
+  border-radius: 1rem;
+  overflow: hidden;
+  border: 5px solid hsla(0, 0%, 50%, 0.5);
+
+}
+.canvas{
   height: 100%;
   width: 100%;
-  object-fit: cover;
+  object-fit: contain;
   object-position: center;
 }
 .btn {
   position: absolute;
   place-items: center;
-  bottom: 10%;
+  bottom: 7%;
   left: 50%;
   transform: translateX(-50%);
   border-radius: 100vh;
